welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:18: error: type mismatch;
 found   : Unit
 required: Boolean
if (c > 0 && z < 4)
^